improve layout styling for various pages

--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -4,19 +4,15 @@
 
     <section class="container--row-pattern">
         <div class="container__header">
-            <h2 class="container__title tone-feature tone-background">
-                <span class="container__title__label u-text-hyphenate">Current Events</span>
-            </h2>
+            <h1 class="content__headline">Current Events</h1>
         </div>
-        <div class="inner-container">
-            <div class="events-sidebar"></div>
-            <ul class="events-list u-unstyled">
-                @for(event <- eventsList) {
+        <div class="events-sidebar"></div>
+        <ul class="events-list u-unstyled">
+            @for(event <- eventsList) {
 
-                    @fragments.event.item(event)
-                }
-            </ul>
-        </div>
+                @fragments.event.item(event)
+            }
+        </ul>
     </section>
 
 }
