--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -2,7 +2,7 @@
 @import views.support.Dates._
 @import model.Eventbrite.EBEventStatus._
 
-<li class="events-list__item facia-slice__item">
+<li class="events-list__item">
     <div class="item item--has-image">
         <div class="item__container">
             <a href="/event/@event.id">
