--- a/frontend/app/views/joiner/tier/friend.scala.html
+++ b/frontend/app/views/joiner/tier/friend.scala.html
@@ -2,15 +2,15 @@
 
 @main("Join | Friend") {
 
-    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
+    <section class="content-section">
         <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
-        <h2 class="section-sub-headline u-text-hyphenate">Friend &#163;Free</h2>
-        <p>
+
+        <div class="action-inline-combo">
+            <h2 class="section-sub-headline u-text-hyphenate">Friend &#163;Free</h2>
             <form class="form--inline" method="POST">
                 <button class="action action--inline-text action--join">Join</button>
             </form>
-            <a href="#whats-included" class="hidden-mobile">Whats Included</a>
-        </p>
+        </div>
     </section>
 
     <section class="joiner-navigation hidden-mobile">
@@ -43,18 +43,18 @@
     <div class="separator"></div>
     <section id="whats-included">
         <h2>Whats Included</h2>
-        <ul class="benefits u-unstyled">
-            <li class="benefits-list">
+        <ul class="benefits u-unstyled l-row l-row--items-4">
+            <li class="benefits-list l-row__item">
                 <span class="benefits-list__item">Digital</span>
             </li>
-            <li class="benefits-list">
+            <li class="benefits-list l-row__item">
                 <span class="benefits-list__item">Community</span>
             </li>
-            <li class="benefits-list">
+            <li class="benefits-list l-row__item">
                 <span class="benefits-list__item">Live</span>
             </li>
-            <li class="benefits-list benefits-list--left-aligned">
-                <span class="benefits-list__item">Friend Free
+            <li class="benefits-list l-row__item">
+                <span class="benefits-list__item action-inline-combo action-inline-combo--nomargin">Friend Free
                     <form class="form--inline" method="POST">
                         <button class="action action--inline-text action--join">Join</button>
                     </form>
