Use &hellip; over ...

--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -8,9 +8,9 @@
         <div class="content__container">
             <section class="l-row l-row--items-2 content__section">
                 <article class="l-row__item l-row__item--boost-2 secondary-content">
-                    <h1 class="content__headline">We don't like goodbyes...</h1>
+                    <h1 class="content__headline">We don't like goodbyes&hellip;</h1>
                     <p>
-                        ...so instead we're going to try and tempt you to stay by reminding you of all the good things
+                        &hellip;so instead we're going to try and tempt you to stay by reminding you of all the good things
                         you get from Guardian Membership
                     </p>
                 </article>
