--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -53,7 +53,7 @@
                                 @if(!event.countryName.isEmpty){ <span>@event.countryName</span> }
                             </span>
                         </div>
-                        <div class="event__time"><span class="icon time--icon"></span>@(event.start)</div>
+                        <div class="event__time"><span class="icon time--icon"></span>@prettyDateWithTime(event.start)</div>
                     </div>
 
                     @for(ticket <- event.ticketClassesHead) {
