Used copy from Membership copy doc for Join page

--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -5,8 +5,16 @@
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
         <h1 class="section-headline">Become a member</h1>
 
-        <p>You should become a guardian partner because Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et auctor nunc. Pellentesque posuere magna eu risus lobortis vel convallis elit scelerisque. Donec est justo, elementum vitae condimentum a, viverra eget augue.</p>
-
+        <p>
+        It’s almost 200 years since the Guardian first appeared in print. And we’re just a few years off notching
+        up 20 years online. Now, we've given the paper a whole new dimension, with the introduction of a live element.
+        Why? Because we don’t do monologues, we have conversations - and we want to have them with you, in real life.
+        We want to get closer to our readers, so we can exchange ideas and learn from each other. 
+        We want you to help us to seek out the stories that matter, keep our award-winning journalism as open, 
+        accessible and relevant as possible and, collectively, to promote the open exchange of ideas and ideals 
+        around the world. Join us today as a friend, partner or patron.
+        
+        </p>
         <ul class="tier-list u-unstyled">
             <li><a href="/join/friend">Become a Friend</a></li>
             <li><a href="/join/partner">Become a Partner</a></li>
