Add more copy to join page
Please apply HTML styling to this copy @chrisfinch

--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -15,6 +15,48 @@
         around the world. Join us today as a friend, partner or patron.
         
         </p>
+         <p>
+         Guardian Live events
+When we say live element, we really mean it: Guardian Live is our rolling programme of events that includes everything 
+from lectures by some of the world’s foremost thinkers and talkers to exclusive screenings of the latest indy films; 
+from Meet the Journalist sessions at our offices in Kings Place to more intimate, bespoke events. For example, 
+on Saturday 15 October, the Weekend magazine crew are heading west from to Notting Hill for a slap-up brunch with 
+Yotam Ottolenghi and guests (that’s you) at Tabernacle. And later this month, Guardian feature writer Kira Cochrane 
+will be sitting on a comfy sofa at RIBA, chatting to national treasure Clare Balding.
+
+•You can check out the full list of what’s on here {link to events calendar}.When you join the Guardian as a friend, 
+partner or patron, you can book tickets for all of our Guardian Live events. You’re also entitled to:
+
+•Discounts
+
+Our partners and patrons get a 20% discount on tickets to all our Guardian Life events (the discount applies to  
++1 tickets as well). 
+
+ 
+•Early booking 
+	 	 	 	
+Tickets to our events can sometimes go quickly, so we give you the chance to get in early, to make sure you get a seat. 
+Patrons get a two-week heads up before tickets go on general sale. For partners, it’s one week.  
+ 
+•Masterclasses
+ 	 	 	 	
+Guardian Masterclasses are growing in number as well as reputation: learn how to serve up Mexican street food, 
+under the guidance of chef and Wahaca owner Thomasina Miers, or find out how to build a website and master 
+data visualisation for designers and marketers. Patrons and partners get a 20% discount on most Masterclasses.
+
+
+Guardian Space
+For the moment, our events will take place at a number of venues around London and the UK. But come January 2016, 
+we'll be flinging open the doors to Space, the new and permanent home for Guardian Live events. Situated just across 
+the road from our offices in King’s Cross, it won't be just a lecture theatre; we want Space to be your space too. 
+A place where you can meet old friends and new, share ideas and great conversations, learn something, expand your 
+mind or just sit back and relax. And if you can't wait until 2016 to see how it’s shaping up, don’t worry; we'll be 
+running regular visits for patrons between now and then. 
+
+CTA Join the Guardian today 
+
+         
+         </p>
         <ul class="tier-list u-unstyled">
             <li><a href="/join/friend">Become a Friend</a></li>
             <li><a href="/join/partner">Become a Partner</a></li>
