--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -1,4 +1,4 @@
-@(targetTier: model.Tier.Tier)(implicit request: play.api.mvc.Request[_])
+@(targetTier: model.Tier.Tier)
 
 @import views.support.selectDates
 @import views.support.Format._
