--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -1,4 +1,4 @@
-@(event: model.Eventbrite.EBEvent)(implicit request: play.api.mvc.Request[_])
+@(event: model.Eventbrite.EBEvent)
 
 @import views.support.Dates._
 @import org.joda.time.Instant
