--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -1,4 +1,4 @@
-@(subscription: model.Stripe.Subscription, card: model.Stripe.Card)(implicit request: play.api.mvc.Request[_])
+@(subscription: model.Stripe.Subscription, card: model.Stripe.Card)
 
 @import configuration.Config
 @import views.support.Dates._
