changed button to anchor as this no longer needs to POST

--- a/frontend/app/views/joiner/tier/friend.scala.html
+++ b/frontend/app/views/joiner/tier/friend.scala.html
@@ -7,9 +7,7 @@
 
         <div class="action-inline-combo">
             <h2 class="section-sub-headline u-text-hyphenate">Friend &#163;Free</h2>
-            <form class="form--inline" method="POST">
-                <button class="action action--inline-text action--join">Join</button>
-            </form>
+            <a class="action action--inline-text action--join" href="/join/friend/detail">Join</a>
         </div>
     </section>
 
@@ -55,9 +53,7 @@
             </li>
             <li class="benefits-list l-row__item">
                 <span class="benefits-list__item action-inline-combo action-inline-combo--nomargin">Friend Free
-                    <form class="form--inline" method="POST">
-                        <button class="action action--inline-text action--join">Join</button>
-                    </form>
+                    <a class="action action--inline-text action--join" href="/join/friend/detail">Join</a>
                 </span>
             </li>
         </ul>
