--- a/frontend/common/app/assets/stylesheets/_head.common.scss
+++ b/frontend/common/app/assets/stylesheets/_head.common.scss
@@ -43,6 +43,8 @@
 /* Icons
    ========================================================================== */
 @import 'components/icons';
+@import 'icons/icons-sprite';
+@import 'icons/icons-svg';
 
 /* Nav
    ========================================================================== */
