--- a/frontend/app/views/fragments/form/paymentOptions.scala.html
+++ b/frontend/app/views/fragments/form/paymentOptions.scala.html
@@ -19,7 +19,7 @@
                 <input type="radio" name="paymentType" id="monthly" value="month"/>
                 <span class="payment-label__title">Pay monthly</span>
                 <span class="payment-label__amount">@monthAmount(targetTier)</span>
-                <span class="payment-label__note">No comittment, cancel at any time (if you can find the button)</span>
+                <span class="payment-label__note">No comittment, cancel at any time</span>
             </label>
         </div>
     </div>
