changed edit profile link to go to /membership/edit

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -84,7 +84,7 @@
                         <a href="@Config.idWebAppUrl/user/id/" class="nav__link js-comment-activity">Comment activity</a>
                     </li>
                     <li class="nav__item">
-                        <a href="@Config.idWebAppUrl/public/edit" class="nav__link">Edit profile</a>
+                        <a href="@Config.idWebAppUrl/membership/edit" class="nav__link">Edit profile</a>
                     </li>
                     <li class="nav__item">
                         <a href="@Config.idWebAppUrl/email-prefs" class="nav__link">Email preferences</a>
