--- a/frontend/app/views/fragments/tier/summary.scala.html
+++ b/frontend/app/views/fragments/tier/summary.scala.html
@@ -1,4 +1,4 @@
-@(subscription: model.Stripe.Subscription, card: model.Stripe.Card)
+@(subscription: model.Stripe.Subscription)
 
 @import views.support.Dates._
 @import views.support.Format._
