Some membership faq questions
Taken from:

https://docs.google.com/a/guardian.co.uk/document/d/1vVKxPHtmcv4QDklUoIre5q5P-m_ziYOn_uA4FSTA-7g/edit

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -2,4 +2,23 @@
 
 @main("Help") {
     <h1>Help</h1>
+    <ul>
+        <li>What is Guardian membership?</li>
+
+        <li>What is Guardian Live?</li>
+
+        <li>Why should I join?</li>
+
+        <li>Why do I have to sign in to the Guardian?</li>
+
+        <li>Can I buy a ticket to an event without becoming a member?</li>
+
+        <li>Can I buy a ticket to an event without signing in?</li>
+
+        <li>How many tickets am I entitled to as a member?</li>
+
+        <li>I don’t live in London - can I still be a member?</li>
+
+        <li>I don’t live in the UK - can I still be a member?</li>
+    </ul>
 }
