--- a/frontend/app/views/fragments/form/billingAddressCTA.scala.html
+++ b/frontend/app/views/fragments/form/billingAddressCTA.scala.html
@@ -1,8 +1,8 @@
-<fieldset class="fieldset">
+<fieldset class="fieldset js-toggle-billing-address u-h">
     <div class="fieldset__heading"></div>
     <div class="fieldset__fields">
         <div class="form-field">
-            <a class="submit-input action--logged-in js-toggle-billing-address">Different billing address?</a>
+            <a class="submit-input action--logged-in js-toggle-billing-address-cta">Different billing address?</a>
         </div>
     </div>
 </fieldset>
