--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -12,10 +12,10 @@
 
         @fragments.form.errorMessageDisplay()
         @fragments.form.nameDetail()
-        @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", true)
+        @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress")
         @fragments.form.cardDetail()
         @fragments.form.billingAddressCTA()
-        @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", false)
+        @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress")
         @fragments.form.paymentOptions(tier)
         @fragments.form.submit("Join now")
     </form>
