load scripts only for modern browsers and show warning for others

--- a/frontend/common/app/assets/stylesheets/_head.common.scss
+++ b/frontend/common/app/assets/stylesheets/_head.common.scss
@@ -20,6 +20,7 @@
 /* Utility
    ========================================================================== */
 @import 'utility/hidden';
+@import 'utility/js-warning';
 
 /* Layout
    ========================================================================== */
