--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -3,6 +3,11 @@
 @import configuration.Config
 
 <header class="header" role="banner">
+    <!-- placeholder until real design and copy arrives -->
+    <div class="js-warning">
+        <p class="js-warning__js-off">Please enable JavaScript.</p>
+        <p class="js-warning__unsupported">Please use a modern browser.</p>
+    </div>
     <div>
         <div class="header__inner">
             <div class="u-cf">
