--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html class="js-off js-not-modern">
     <head>
         @import configuration.Config
         @if(!Config.membershipHide){
@@ -37,8 +37,6 @@
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/style.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
-
-        <script async="async" type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
