--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -2,61 +2,65 @@
 
 @import model.Countries
 
-<fieldset class="fieldset address-fieldset js-@(formType)-fieldset @if(!isVisible){u-h}">
+<fieldset class="fieldset address-fieldset js-@(formType)-fieldset @if(!isVisible){address-fieldset--showable}">
 
-    <div class="fieldset__heading">
-        <h2 class="form__heading">@heading</h2>
-        <div class="form__note">@note</div>
-    </div>
+    <div class="address-fieldset__inner">
 
-    <div class="fieldset__fields">
-
-        <div class="form-field">
-            <label class="label" for="address-line-one">Address line 1
-                <input type="text" name="@(formType).lineOne" id="address-line-one"
-                       class="text-input text-input--block js-address-line-one"
-                       data-error-message="Please enter your address first line"/>
-            </label>
+        <div class="fieldset__heading">
+            <h2 class="form__heading">@heading</h2>
+            <div class="form__note">@note</div>
         </div>
 
-        <div class="form-field">
-            <label class="label" for="address-line-two">Address line 2
-                <input type="text" name="@(formType).lineTwo" id="address-line-two"
-                       class="text-input text-input--block js-address-line-two"/>
-            </label>
-        </div>
+        <div class="fieldset__fields">
 
-        <div class="form-field">
-            <label class="label" for="town">Town
-                <input type="text" name="@(formType).town" id="town" class="text-input text-input--block js-town"
-                       data-error-message="Please enter your town"/>
-            </label>
-        </div>
-
-        <div class="form-field">
-            <label class="label" for="county-or-state">County or State
-                <input type="text" name="@(formType).countyOrState" id="county-or-state"
-                       class="text-input text-input--block js-county-state"/>
-            </label>
-        </div>
-
-        <div class="form-field">
-            <label class="label" for="postCode">Post code
-                <input type="text" name="@(formType).postCode" id="postCode"
-                       class="text-input text-input--block js-post-code"
-                       data-error-message="Please enter your post code"/>
-            </label>
-        </div>
-
-        <div class="form-field address-fieldset__country">
-            <label class="label" for="country">Country</label>
-            <div class="input">
-                <select name="@(formType).country" id="country">
-                    @for(country <- Countries.all) {
-                    <option value="@country">@country</option>
-                    }
-                </select>
+            <div class="form-field">
+                <label class="label" for="address-line-one">Address line 1
+                    <input type="text" name="@(formType).lineOne" id="address-line-one"
+                           class="text-input text-input--block js-address-line-one"
+                           data-error-message="Please enter your address first line"/>
+                </label>
             </div>
+
+            <div class="form-field">
+                <label class="label" for="address-line-two">Address line 2
+                    <input type="text" name="@(formType).lineTwo" id="address-line-two"
+                           class="text-input text-input--block js-address-line-two"/>
+                </label>
+            </div>
+
+            <div class="form-field">
+                <label class="label" for="town">Town
+                    <input type="text" name="@(formType).town" id="town" class="text-input text-input--block js-town"
+                           data-error-message="Please enter your town"/>
+                </label>
+            </div>
+
+            <div class="form-field">
+                <label class="label" for="county-or-state">County or State
+                    <input type="text" name="@(formType).countyOrState" id="county-or-state"
+                           class="text-input text-input--block js-county-state"/>
+                </label>
+            </div>
+
+            <div class="form-field">
+                <label class="label" for="postCode">Post code
+                    <input type="text" name="@(formType).postCode" id="postCode"
+                           class="text-input text-input--block js-post-code"
+                           data-error-message="Please enter your post code"/>
+                </label>
+            </div>
+
+            <div class="form-field address-fieldset__country">
+                <label class="label" for="country">Country</label>
+                <div class="input">
+                    <select name="@(formType).country" id="country">
+                        @for(country <- Countries.all) {
+                        <option value="@country">@country</option>
+                        }
+                    </select>
+                </div>
+            </div>
+
         </div>
 
     </div>
