--- a/frontend/common/app/assets/stylesheets/base/_forms.scss
+++ b/frontend/common/app/assets/stylesheets/base/_forms.scss
@@ -333,5 +333,25 @@
             font-size: 18px,
             margin-right: $gs-baseline / 2
         ));
+
+    }
+}
+
+.address-fieldset {
+    overflow: hidden;
+    padding: 0;
+    .address-fieldset__inner {
+        @include rem((
+            padding: (($gs-baseline/3)*4 - 1) 0 ($gs-baseline*2)
+        ));
+    }
+    &.address-fieldset--showable {
+        max-height: 0;
+        @include transition(all .75s ease-in-out);
+        &.address-fieldset--show {
+            @include rem((
+                max-height: 536px
+            ));
+        }
     }
 }
