Moved MemberService to scalaforce project
Also moved the Member and Tier models, lots of little import changes to
fix that.

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -1,7 +1,7 @@
-@(currentTier: model.Tier.Tier, tier: model.Tier.Tier)
+@(currentTier: com.gu.membership.salesforce.Tier.Tier, tier: com.gu.membership.salesforce.Tier.Tier)
 
 @import configuration.Config
-@import model.Tier
+@import com.gu.membership.salesforce.Tier
 
 @defining(currentTier == tier) { isCurrentPackage =>
     <div class="package@if(isCurrentPackage){ package--current}">
