--- a/frontend/app/views/fragments/tier/upgradeAside.scala.html
+++ b/frontend/app/views/fragments/tier/upgradeAside.scala.html
@@ -1,4 +1,4 @@
-@(tier: model.Tier.Tier)
+@(tier: com.gu.membership.salesforce.Tier.Tier)
 
 @import views.support.Dates._
 @import views.support.Format._
