--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -1,6 +1,6 @@
-@(currentTier: model.Tier.Tier)
+@(currentTier: com.gu.membership.salesforce.Tier.Tier)
 
-@import model.Tier
+@import com.gu.membership.salesforce.Tier
 @import configuration.Config
 
 @main("Cancel Tier") {
