--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -1,7 +1,7 @@
-@(currentTier: model.Tier.Tier)
+@(currentTier: com.gu.membership.salesforce.Tier.Tier)
 
 @import configuration.Config
-@import model.Tier
+@import com.gu.membership.salesforce.Tier
 
 @main("Change Tier") {
 
