--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -1,4 +1,4 @@
-@(tier: model.Tier.Tier, amount: Int)
+@(tier: com.gu.membership.salesforce.Tier.Tier, amount: Int)
 
 @import views.support.Format._
 
