added header__inner--popup class to align popup menu correctly

--- a/frontend/common/app/assets/stylesheets/layout/_header.scss
+++ b/frontend/common/app/assets/stylesheets/layout/_header.scss
@@ -5,6 +5,15 @@
             padding: $gs-gutter/2
         ));
     }
+    .header__inner--popup {
+        padding: 0;
+
+        @include mq(tablet) {
+            @include rem((
+                padding: $gs-gutter/2
+            ));
+        }
+    }
     .header__primary {
         float: left;
     }
