added js-required class and logic to use address validation or not

--- a/frontend/app/views/fragments/form/nameDetail.scala.html
+++ b/frontend/app/views/fragments/form/nameDetail.scala.html
@@ -9,13 +9,13 @@
 
         <div class="form-field">
             <label class="label label--inline label--half" for="name-first">First
-                <input type="text" name="name.first" id="name-first" class="text-input text-input--block js-name-first"
-                       data-error-message="Please enter your first name"/>
+                <input type="text" name="name.first" id="name-first" class="text-input text-input--block js-name-first js-required"
+                       data-error-message="Please enter your first name" />
             </label>@*
             == Inline block whitespace ==
             *@<label class="label label--inline label--half" for="name-last">Last
-                <input type="text" name="name.last" id="name-last" class="text-input text-input--block js-name-last"
-                       data-error-message="Please enter your last name"/>
+                <input type="text" name="name.last" id="name-last" class="text-input text-input--block js-name-last js-required"
+                       data-error-message="Please enter your last name" />
             </label>
         </div>
 
