--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -1,4 +1,4 @@
-@(heading: String, note: String, formType: String)
+@(heading: String, note: String, formType: String, addressRequired: Boolean = true)
 
 @import model.Countries
 
@@ -14,8 +14,8 @@
         <div class="form-field">
             <label class="label" for="address-line-one">Address line 1
                 <input type="text" name="@(formType).lineOne" id="address-line-one"
-                       class="text-input text-input--block js-address-line-one"
-                       data-error-message="Please enter your @heading.toLowerCase() first line"/>
+                       class="text-input text-input--block js-address-line-one @if(addressRequired == true){js-required}"
+                       data-error-message="Please enter your @heading.toLowerCase() first line" />
             </label>
         </div>
 
@@ -28,7 +28,7 @@
 
         <div class="form-field">
             <label class="label" for="town">Town
-                <input type="text" name="@(formType).town" id="town" class="text-input text-input--block js-town"
+                <input type="text" name="@(formType).town" id="town" class="text-input text-input--block js-town @if(addressRequired == true){js-required}"
                        data-error-message="Please enter your @heading.toLowerCase() town"/>
             </label>
         </div>
@@ -43,8 +43,8 @@
         <div class="form-field">
             <label class="label" for="postCode">Post code
                 <input type="text" name="@(formType).postCode" id="postCode"
-                       class="text-input text-input--block js-post-code"
-                       data-error-message="Please enter your @heading.toLowerCase() post code"/>
+                       class="text-input text-input--block js-post-code js-required"
+                       data-error-message="Please enter your @heading.toLowerCase() post code" />
             </label>
         </div>
 
